--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,8 @@ jobs:
         command: |
             wget http://download.redis.io/releases/redis-4.0.6.tar.gz
             tar xzf redis-4.0.6.tar.gz
-            cd redis-4.0.6 && make
+            cd redis-4.0.6
+            make
       - run:
           name: Install MySQL Client
           command: |
