--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             sudo dpkg --configure -a
             sudo apt install -y libmysqlclient-dev mysql-client
 
-      - run
+      - run:
         name: Install mongodb
         command: |
           sudo apt-get install -y mongodb-org
