--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,6 @@ jobs:
             sudo apt install -y libmysqlclient-dev mysql-client
 
       - run:
-        name: Install mongodb
-        command: |
-          sudo apt-get install -y mongodb-org
-
-      - run:
           name: Install Cilantro Requirements
           command: |
              pip install -r requirements.txt --upgrade --no-cache-dir --exists-action w
@@ -77,6 +72,7 @@ jobs:
       - image: circleci/python:3.6.5
       - image: redis:4.0.6
       - image: lamden/cilantro-db
+      - image: lamden/cilantro-mn
         environment:
           username: cilantro_user
           password: buttcoins
@@ -97,11 +93,6 @@ jobs:
           name: Install Mysql Client
           command: |
              sudo apt install -y mysql-client
-
-      - run:
-          name: Install mongodb
-          command: |
-              sudo apt-get install -y mongodb-org
 
       - run:
           name: set temp credentials file (aka db config stuff)
