--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,7 +112,7 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1 --skip_modules tests.unit.protocol.overlay tests.unit.nodes.masternode
+            python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1
       - run:
           mkdir -p unit-test-results
       - store_test_results:
