--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ urllib3==1.22
 uvloop==0.9.1
 u-msgpack-python==2.5.0
 yarl==1.1.0
--e git://github.com/Lamden/seneca.git@dev#egg=seneca
+# -e git://github.com/Lamden/seneca.git@dev#egg=seneca
+seneca
 click
 simple-crypt
 sanic
