--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     parallelism: 5
     steps:
       - checkout
+      - run: rm -rf /usr/local/seneca
+      - run: mkdir /usr/local/seneca
+      - run: sudo chown -R circleci:circleci /usr/local/seneca
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
       - restore_cache:
@@ -80,6 +83,9 @@ jobs:
     parallelism: 1
     steps:
       - checkout
+      - run: rm -rf /usr/local/seneca
+      - run: mkdir /usr/local/seneca
+      - run: sudo chown -R circleci:circleci /usr/local/seneca
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - restore_cache:
