--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,7 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1
+            python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1 -v
       - run:
           mkdir -p unit-test-results
       - store_test_results:
