--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ uvloop==0.9.1
 u-msgpack-python==2.5.0
 yarl==1.1.0
 -e git://github.com/Lamden/seneca.git@dev#egg=seneca
+# seneca
 click
 simple-crypt
 sanic
