--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,9 +59,9 @@ jobs:
     working_directory: ~/cilantro
     docker:
       - image: circleci/python:3.6.5
+      - image: circleci/mongo:4.0.4
       - image: redis:4.0.6
       - image: lamden/cilantro-mn
-      - image: lamden/cilantro-db
         environment:
           username: cilantro_user
           password: buttcoins
