--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            python3 ./scripts/make_test_config.py
             ./redis-4.0.6/src/redis-server --daemonize yes
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
@@ -88,6 +89,7 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            python3 ./scripts/make_test_config.py
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
             python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1
