--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,7 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
             python3 ./scripts/make_test_config.py
+            bash ./scripts/start_mongo.sh
             python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1
 
       - run:
