--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ u-msgpack-python==2.5.0
 Click==7.0
 sanic==0.8.3
 pymongo==3.7.2
-seneca
+# seneca
+-e git://github.com/Lamden/seneca.git@dev#egg=seneca
 sanic_limiter
 simple-crypt
 
