--- a/mn_db_conf.ini
+++ b/mn_db_conf.ini
@@ -14,7 +14,7 @@ hostname = 127.0.0.1
 port = 27017
 replication = 3
 quorum = 3
-total_mn = 12
+total_mn = 6
 mn_id = 1
 
-test_hook = False
+test_hook = True
