--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,10 @@ jobs:
     parallelism: 5
     steps:
       - checkout
-      - run: sudo rm -rf /usr/local/seneca
-      - run: sudo mkdir /usr/local/seneca
-      - run: sudo chown -R circleci:circleci /usr/local/seneca
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
       - restore_cache:
-          key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
+          key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration-0
       - run: pyenv local 3.6.5
       - run:
           name: Install Redis
@@ -25,6 +22,8 @@ jobs:
           name: Install MySQL Client
           command: |
             sudo rm /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/lock 2>/dev/null
+            sudo rm /home/circleci/cilantro/overlay-cmd-ipc-sock-node_* 2>/dev/null
+            sudo rm /home/circleci/cilantro/overlay-event-ipc-sock-node_* 2>/dev/null
             sudo dpkg --configure -a
             sudo apt install -y libmysqlclient-dev mysql-client
 
@@ -55,7 +54,7 @@ jobs:
              ./scripts/make_test_config.py --password buttcoins --username cilantro_user --database cilantro_dev --hostname 127.0.0.1
 
       - save_cache:
-          key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
+          key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration-0
           paths:
             - "/usr/local/bin"
             - "/opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages"
@@ -83,9 +82,6 @@ jobs:
     parallelism: 1
     steps:
       - checkout
-      - run: sudo rm -rf /usr/local/seneca
-      - run: sudo mkdir /usr/local/seneca
-      - run: sudo chown -R circleci:circleci /usr/local/seneca
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - restore_cache:
@@ -118,7 +114,7 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1 -v
+            python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1
       - run:
           mkdir -p unit-test-results
       - store_test_results:
@@ -129,4 +125,4 @@ workflows:
   build_and_test_cilantro:
     jobs:
       - unit_tests
-      - integration_tests
+      # - integration_tests
