--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     working_directory: ~/cilantro
     docker:
       - image: circleci/python:3.6.5
+      - image: redis:4.0.6
       - image: lamden/cilantro
     # machine:
         # image: circleci/classic:201808-01
@@ -15,7 +16,6 @@ jobs:
       - run: sudo chown -R circleci:circleci /usr/local/seneca
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
-      - run: sudo chown -R circleci:circleci opt/circleci/.pyenv
       - restore_cache:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
       - run: pyenv local 3.6.5
@@ -65,7 +65,7 @@ jobs:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
           paths:
             - "/usr/local/bin"
-            - "/opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages"
+            - "/usr/local/lib/python3.6/site-packages"
             - "redis-4.0.6"
 
       - run:
