--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,9 @@
 version: 2
 jobs:
   integration_tests:
+    machine:
+        image: circleci/classic:201808-01
     working_directory: ~/cilantro
-    docker:
-      - image: circleci/python:3.6.5
-      - image: redis:4.0.6
-      - image: lamden/cilantro
-    # machine:
-        # image: circleci/classic:201808-01
     parallelism: 5
     steps:
       - checkout
@@ -15,7 +11,7 @@ jobs:
       - run: sudo mkdir /usr/local/seneca
       - run: sudo chown -R circleci:circleci /usr/local/seneca
       - run: sudo chown -R circleci:circleci /usr/local/bin
-      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+      - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
       - restore_cache:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
       - run: pyenv local 3.6.5
@@ -28,10 +24,9 @@ jobs:
       - run:
           name: Install MySQL Client
           command: |
-            sudo rm -f /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/lock 2>/dev/null
             # sudo rm -f /home/circleci/cilantro/overlay-cmd-ipc-sock-node_* 2>/dev/null
             # sudo rm -f /home/circleci/cilantro/overlay-event-ipc-sock-node_* 2>/dev/null
-            sudo rm /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/lock 2>/dev/null
+            sudo rm -f /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/lock 2>/dev/null
             sudo dpkg --configure -a
             sudo apt install -y libmysqlclient-dev mysql-client
 
@@ -65,7 +60,7 @@ jobs:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
           paths:
             - "/usr/local/bin"
-            - "/usr/local/lib/python3.6/site-packages"
+            - "/opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages"
             - "redis-4.0.6"
 
       - run:
@@ -74,7 +69,7 @@ jobs:
             ./redis-4.0.6/src/redis-server --daemonize yes
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            python3.6 ~/cilantro/tests/run_tests.py --integration 1 --unit 0 -v
+            python3.6 ~/cilantro/tests/run_tests.py --integration 1 --unit 0
 
   unit_tests:
     working_directory: ~/cilantro
