--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           name: Install MongoDB
           command: |
             sudo apt-get update
-            sudo apt-get install -y software-properties-common
+            sudo apt-get install -y software-properties-common apt-transport-https
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
             sudo add-apt-repository 'deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse'
             sudo apt-get update
@@ -89,7 +89,7 @@ jobs:
           name: Install MongoDB
           command: |
             sudo apt-get update
-            sudo apt-get install -y software-properties-common
+            sudo apt-get install -y software-properties-common apt-transport-https
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
             sudo add-apt-repository 'deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse'
             sudo apt-get update
