--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
             sudo add-apt-repository 'deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse'
             sudo apt-get update
-            sudo apt-get install -y mongodb-org
+            sudo apt-get install -y mongodb-org mongodb-org-server
 
       - run:
           name: Install Cilantro Requirements
@@ -93,7 +93,7 @@ jobs:
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
             sudo add-apt-repository 'deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse'
             sudo apt-get update
-            sudo apt-get install -y mongodb-org
+            sudo apt-get install -y mongodb-org mongodb-org-server
 
       - run:
           name: Install Cilantro Requirements
