--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,13 @@ jobs:
             cd redis-4.0.6 && make
 
       - run:
-          name: Install MongoDB
+          name: Install Mongo
           command: |
+            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6
+            echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
             sudo apt-get update
-            sudo apt-get install -y software-properties-common apt-transport-https
-            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
-            sudo add-apt-repository 'deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse'
-            sudo apt-get update
-            sudo apt-get install -y mongodb-org mongodb-org-server
+            sudo apt-get install -y mongodb-org mongodb-org-shell mongodb-org-server mongodb-org-mongos mongodb-org-tools
+            sudo apt-get autoremove
 
       - run:
           name: Install Cilantro Requirements
@@ -89,9 +88,9 @@ jobs:
           name: Install Mongo
           command: |
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6
-            echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.4.list
+            echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
             sudo apt-get update
-            sudo apt-get install -y mongodb-org
+            sudo apt-get install -y mongodb-org mongodb-org-shell mongodb-org-server mongodb-org-mongos mongodb-org-tools
             sudo apt-get autoremove
 
       - run:
