--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
       - image: circleci/python:3.6.5
       - image: redis:4.0.6
       - image: lamden/cilantro-mn
-      - image: circleci/mongo:4.0.4
+      - image: circleci/mongo:latest
         environment:
           username: cilantro_user
           password: buttcoins
