--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
       - image: circleci/python:3.6.5
       - image: redis:4.0.6
       - image: lamden/cilantro-mn
-      - image: circleci/mongo:latest
+      - image: circleci/mongo:4.0.4
         environment:
           username: cilantro_user
           password: buttcoins
@@ -90,7 +90,7 @@ jobs:
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6
             echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.4.list
             sudo apt-get update
-            sudo apt-get install -y mongodb-org mongodb-org-shell mongodb-org-server mongodb-org-mongos mongodb-org-tools
+            sudo apt-get install -y mongodb-org mongodb-org-shell mongodb-org-server mongodb-org-mongos mongodb-org-tools libssl
             sudo apt-get autoremove
 
       - run:
