--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6
             echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.4.list
             sudo apt-get update
-            sudo apt-get install -y mongodb-org mongodb-org-shell mongodb-org-server mongodb-org-mongos mongodb-org-tools libssl-dev
+            sudo apt-get install -y mongodb-org mongodb-org-shell mongodb-org-server mongodb-org-mongos mongodb-org-tools libssl1.0.0
             sudo apt-get autoremove
 
       - run:
