--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,13 @@ jobs:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-unit
 
       - run:
+          name: Install Mongo
+          command: |
+            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
+            echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
+
+
+      - run:
           name: Install Cilantro Requirements
           command: |
              sudo pip3 install -r requirements.txt --upgrade --no-cache-dir --exists-action w
