--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,16 +84,6 @@ jobs:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-unit
 
       - run:
-          name: Install Mongo
-          command: |
-            sudo apt-get update
-            sudo apt-get install apt-transport-https
-            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
-            echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
-            sudo apt-get update
-            sudo apt-get install -f -y mongodb-org
-
-      - run:
           name: Install Cilantro Requirements
           command: |
              sudo pip3 install -r requirements.txt --upgrade --no-cache-dir --exists-action w
@@ -111,7 +101,7 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
             python3 ./scripts/make_test_config.py
-            bash ./scripts/start_mongo.sh
+            sudo start mongodb
             python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1
 
       - run:
