--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,12 +86,12 @@ jobs:
       - run:
           name: Install Mongo
           command: |
-            sudo apt-get update
-            sudo apt-get install apt-transport-https
-            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
+            apt-get update
+            apt-get install apt-transport-https
+            apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
             echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
-            sudo apt-get update
-            sudo apt-get install -y mongodb-org
+            apt-get update
+            apt-get install -y mongodb-org
 
       - run:
           name: Install Cilantro Requirements
