try this approach

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,12 +86,13 @@ jobs:
       - run:
           name: Install Mongo
           command: |
-            apt-get update
-            apt-get install apt-transport-https
-            apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
-            echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
-            apt-get update
-            apt-get install -y mongodb-org
+            sudo apt-get update
+            sudo apt-get install curl
+            curl -O https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.4.9.tgz
+            tar -zxvf mongodb-linux-x86_64-3.4.9.tgz
+            mkdir -p mongodb
+            cp -R -n mongodb-linux-x86_64-3.4.9/ mongodb
+            export PATH=mongodb/bin:$PATH
 
       - run:
           name: Install Cilantro Requirements
