--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
             curl -O https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.4.9.tgz
             tar -zxvf mongodb-linux-x86_64-3.4.9.tgz
             mkdir -p mongodb
-            cp -R -n mongodb-linux-x86_64-3.4.9/ mongodb
+            sudo cp -R -n mongodb-linux-x86_64-3.4.9/bin /bin
 
       - run:
           name: Install Cilantro Requirements
@@ -110,7 +110,6 @@ jobs:
           command: |
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
-            export PATH=mongodb/bin:$PATH
             python3 ./scripts/make_test_config.py
             bash ./scripts/start_mongo.sh
             python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1
