--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
             curl -O https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.4.9.tgz
             tar -zxvf mongodb-linux-x86_64-3.4.9.tgz
             mkdir -p mongodb
-            sudo cp -R -n mongodb-linux-x86_64-3.4.9/bin /bin
+            sudo cp -R -n mongodb-linux-x86_64-3.4.9/bin/* /usr/local/bin/
 
       - run:
           name: Install Cilantro Requirements
