--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ jobs:
           name: Install Mongo
           command: |
             sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv EA312927
-            echo "deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-3.2.list
+            echo "deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.2.list
             sudo apt-get -qq update
             sudo apt-get update
             sudo apt-get install mongodb-org
