--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,11 +86,12 @@ jobs:
       - run:
           name: Install Mongo
           command: |
-            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv EA312927
-            echo "deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.2.list
-            sudo apt-get -qq update
             sudo apt-get update
-            sudo apt-get install mongodb-org
+            sudo apt-get install curl
+            curl -O https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.4.9.tgz
+            tar -zxvf mongodb-linux-x86_64-3.4.9.tgz
+            mkdir -p mongodb
+            sudo ln -s mongodb-linux-x86_64-3.4.9/bin /usr/local/bin
 
       - run:
           name: Install Cilantro Requirements
