--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,11 +86,12 @@ jobs:
       - run:
           name: Install Mongo
           command: |
-            sudo apt-get install apt-transport-https
-            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
-            echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
+            sudo apt-get purge mongodb-org*
+            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
+            echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
             sudo apt-get update
-            sudo apt-get install -y mongodb-org mongodb-org-server
+            sudo apt-get install -y mongodb-org
+            sudo service mongod restart
 
       - run:
           name: Install Cilantro Requirements
