--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,9 +63,9 @@ jobs:
     working_directory: ~/cilantro
     docker:
       - image: circleci/python:3.6.5
+      - image: circleci/mongo:4.0.4-xenial
       - image: redis:4.0.6
       - image: lamden/cilantro-mn
-      - image: circleci/mongo:4.0.4-xenial
         environment:
           username: cilantro_user
           password: buttcoins
@@ -86,12 +86,10 @@ jobs:
       - run:
           name: Install Mongo
           command: |
-            sudo apt-get purge mongodb-org*
-            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
-            echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
+            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6
+            echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.4.list
             sudo apt-get update
-            sudo apt-get install -y mongodb-org
-            sudo service mongod restart
+            sudo apt-get install mongodb
 
       - run:
           name: Install Cilantro Requirements
