fixt...using seneca from pip now

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ requests==2.20.0
 uvloop==0.9.1
 u-msgpack-python==2.5.0
 yarl==1.1.0
--e git://github.com/Lamden/seneca.git@dev#egg=seneca
+# -e git://github.com/Lamden/seneca.git@dev#egg=seneca
+seneca
 click
 simple-crypt
 sanic
