--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@ Cython==0.29
 pycapnp==0.6.3
 #PyNaCl==1.2.1
 pyzmq==17.0.0
-requests==2.20.0
+requests==2.18.4
 uvloop==0.9.1
 u-msgpack-python==2.5.0
-yarl==1.1.0
 -e git://github.com/Lamden/seneca.git@dev#egg=seneca
-click
-simple-crypt
-sanic
+Click==7.0
+sanic==0.8.3
 pymongo==3.7.2
