--- a/mn_db_conf.ini
+++ b/mn_db_conf.ini
@@ -13,7 +13,7 @@ hostname = 127.0.0.1
 port = 27017
 replication = 3
 quorum = 3
-total_mn = 6
-mn_id = 1
+total_mn = 1
+mn_id = 0
 
-test_hook = False
+test_hook = True
