--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 # New req=v.2
 Cython==0.29
 pycapnp==0.6.3
-#PyNaCl==1.2.1
+PyNaCl==1.2.1
 pyzmq==17.0.0
 requests==2.18.4
 uvloop==0.9.1
 u-msgpack-python==2.5.0
 yarl==1.1.0
-seneca
-click
-simple-crypt
-sanic
+Click==7.0
+simple-crypt==4.1.7
+sanic==0.8.3
 sanic-limiter==0.1.3
 pymongo==3.7.2
+vmnet
+seneca
