--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ vmnet_configs/constitutions/private
 # Config files
 db_conf.ini
 cilantro/testnet_configs/testnet.ini
+tests/cloud/Dockerfile
 
 # Docker
 docker-compose.yml
