--- a/docker/redis.conf
+++ b/docker/redis.conf
@@ -250,6 +250,7 @@ rdbcompression yes
 rdbchecksum yes
 
 # The filename where to dump the DB
+# dbfilename dump.rdb
 dbfilename dump.rdb
 
 # The working directory.
