--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,7 @@ jobs:
           name: Install Mongo
           command: |
              sudo apt-get install mongodb
+             sudo mkdir -p /data/db
 
       - save_cache:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-unit
@@ -92,8 +93,7 @@ jobs:
           name: Run Tests
           command: |
             redis-server &
-            sudo mkdir -p /data/db
-            mongod &
+            sudo mongod &
             export PYTHONPATH=$PYTHONPATH:~/cilantro
             export LOCAL_PATH=~
             python3.6 ~/cilantro/tests/run_tests.py --integration 0 --unit 1 --skip_modules tests.unit.nodes.masternode tests.unit.nodes.delegate
