--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ simple-crypt==4.1.7
 sanic==0.8.3
 sanic-limiter==0.1.3
 Sanic-Cors==0.9.7
-pymongo==3.7.2/sanic_cors
+pymongo==3.7.2
+sanic_cors
 vmnet
 seneca
 
