--- a/good_d.conf
+++ b/good_d.conf
@@ -1,14 +1,19 @@
 [circus]
 statsd = True
-app_path = '/Users/davishaba/Developer/cilantro'  # TODO -- change
+
+[plugin:redis-observer]
+use = circus.plugins.redis_observer.RedisObserver
+
+[watcher:test]
+cmd = echo "hellllooooo this is circus here"
 
 [watcher:redis]
-cmd = python3 $(app_path)/start_redis.py
+cmd = python3 /app/scripts/start_redis.py
 
 [watcher:mongo]
-cmd = python3 $(app_path)/start_mongo.py
+cmd = python3 /app/scripts/start_mongo.py
 
 [watcher:bootstrap]
-cmd = python3 $(app_path)/bootstrap.py
+cmd = python3 /app/scripts/bootstrap.py
 #warmup_delay = 10  # Wait a bit for redis/mongo to start up (TODO how to wait programatically?)
 
