--- a/good_d.conf
+++ b/good_d.conf
@@ -4,25 +4,21 @@ statsd = True
 [plugin:redis-observer]
 use = circus.plugins.redis_observer.RedisObserver
 
-[watcher:test]
-cmd = echo "hellllooooo this is circus here"
-respawn = False
-
 [watcher:redis]
-cmd = sudo redis-server
-#cmd = python3 /app/scripts/start_redis.py
+cmd = python3 /app/scripts/start_redis.py
 respawn = False
 
 [watcher:mongo]
 cmd = python3 /app/scripts/start_mongo.py
 respawn = False
 
-#[watcher:mongo_create_user]
-#cmd = python3 /app/scripts/create_user.py
-#warmup_delay = 5
+[watcher:mongo_create_user]
+cmd = python3 /app/scripts/create_user.py
+warmup_delay = 5
+respawn = False
 
 [watcher:bootstrap]
-cmd = python3 /app/scripts/bootstrap.py
-#warmup_delay = 10  # Wait a bit for redis/mongo to start up (TODO how to wait programatically?)
-respawn = False
+cmd = python3 app/scripts/bootstrap.py
+warmup_delay = 10
+#respawn = False
 
