--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
-# New req=v.3
-Cython==0.29
-pycapnp==0.6.3
-PyNaCl==1.2.1
-pyzmq==17.0.0
 requests==2.20.0
 uvloop==0.9.1
-u-msgpack-python==2.5.0
+#u-msgpack-python==2.5.0
 yarl==1.1.0
 Click==7.0
 simple-crypt==4.1.7
 sanic==0.8.3
 sanic-limiter==0.1.3
 Sanic-Cors==0.9.7
-pymongo==3.7.2
 vmnet
 seneca
 pathspec
