Full terraform configurations for dynamic cilantro nodes Automatic terraform configuration generation Isolation of shared resources in terraform AWS keypair generated in each region for easy movement cross-region

--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,11 @@ seneca
 *.dat
 **/profiles/**
 **/tmp_exec_code*.py
+**/.terraform/**
 data
 vmnet_configs/constitutions/private
+*.tfstate
+*.tfstate.backup
 
 # Config files
 db_conf.ini
