--- a/ops/base/redis.conf
+++ b/ops/base/redis.conf
@@ -260,7 +260,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir var/db/cilantro/redis
+dir /var/db/cilantro/redis
 
 ################################# REPLICATION #################################
 
