test end to end to exclude special wallets so we can use them in other tests

--- a/ops/base/environment/Makefile
+++ b/ops/base/environment/Makefile
@@ -88,8 +88,8 @@ show:
 	@echo ""
 
 testdump:
-	python3 $(CILANTRO_ROOT)/ops/tools/dump.py $(MY_PATH)
+	@python3 $(CILANTRO_ROOT)/ops/tools/dump.py $(MY_PATH)
 
 
 test:
-	python3 $(CILANTRO_ROOT)/ops/tools/test_end_to_end.py $(MY_PATH)
+	@python3 $(CILANTRO_ROOT)/ops/tools/test_end_to_end.py $(MY_PATH)
